--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SunCart Book</title>
+<title>Evermore SunCarts</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -76,7 +76,7 @@
 </style>
 </head>
 <body>
-<h1>Golf Cart Tracker</h1>
+<h1>Evermore SunCarts</h1>
 
 <div class="fixed-summary">
     <h2>Status Summary:</h2>
