--- a/templates/history.html
+++ b/templates/history.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SunCart History</title>
+<title>SunCarts History</title>
+<link rel="icon" type="image/svg+xml" href="/static/spiral-main.svg">
 <style>
     body {
         font-family: Arial, sans-serif; margin: 20px;
