--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Login</title>
+<title>SunCarts Login</title>
+<link rel="icon" type="image/svg+xml" href="/static/spiral-main.svg">
 <style>
     body {
         font-family: Arial, sans-serif;
