--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
 </div>
 
 <div class="container">
-    <label for="cart">Seleccionar Carrito:</label>
+    <label for="cart">Select Suncart:</label>
     <select id="cart" onchange="loadCart()">
         {% for cart in carts %}
             <option value="{{cart}}">{{cart}}</option>
